--- a/escom-bpm-web/src/main/webapp/view/common/item-select-btn.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/item-select-btn.xhtml
@@ -20,10 +20,9 @@
             <p:ajax event="dialogReturn" update="#{_itemPanel}"/>
         </p:commandButton>
 
-
         <h:panelGroup id="#{_itemPanel}">
-            <div class="ui-inputgroup">
-                <p:inputText id="item" value="#{_itemValue.fullName}" title="#{_titleItem}" styleClass="ui-grid-col-10 without-spaces"
+            <div class="ui-inputgroup ui-grid-col-12">
+                <p:inputText id="item" value="#{_itemValue.fullName}" title="#{_titleItem}" styleClass="ui-grid-col-11 without-spaces"
                              disabled="#{_disabled}" style="color: blue;"
                              readonly="true"
                              validator="#{_bean[_validateAction]}"
