--- a/escom-bpm-web/src/main/webapp/view/docs/attaches/attaches.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/attaches/attaches.xhtml
@@ -5,8 +5,8 @@
                  xmlns:h="http://xmlns.jcp.org/jsf/html">    
 
     <p:tab title="#{bundle.Versions}" >                 
-        <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 col-padding">
-            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 col-padding">            
+        <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 col-padding">
+            <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 col-padding">            
                 <p:commandButton icon="ui-icon-clipboard" value="#{bundle.AddVersionFromScan}" id="btnScan" rendered="false"         
                                  actionListener="#{sessionBean.openScaningForm()}">
                     <p:ajax event="dialogReturn" listener="#{docCardBean.addAttacheFromScan}" update="versionsTBL"/>
@@ -30,7 +30,7 @@
                 </p:fileUpload>            
             </p:panelGrid>
 
-            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 col-padding">
+            <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 col-padding">
                 <p:dataTable id="versionsTBL" value="#{docCardBean.editedItem.attachesList}" 
                              emptyMessage="#{bundle.EmptyTable}"
                              tableStyle="table-layout: auto;" styleClass="ui-grid-col-12 col-padding"
