--- a/escom-bpm-web/src/main/webapp/view/docs/docStatus/statusesdoc-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/docStatus/statusesdoc-card.xhtml
@@ -9,15 +9,23 @@
     <ui:define name="page_body">
                 
           <p:tab id="cardTab" title="#{bundle.Explorer}">     
-            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-panelgrid-blank ui-grid-col-12 col-padding">
-                <p:outputLabel value="#{bundle.Name}" />
+            <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 col-padding">
+                <p:outputLabel value="#{bundle.Name}" indicateRequired="true"/>
                 <p:inputText id="nameItem" value="#{_bean.editedItem.name}"
-                             styleClass="ui-grid-col-12 col-padding"
+                             styleClass="ui-grid-col-12"
                              onkeypress="checkEsc(#{_bean.cancelBtnName});"
                              onchange="return itemChange = 1;"
                              disabled="#{_bean.isReadOnly()}"
                              required="#{param['isRequired'] == 'true'}"
                              requiredMessage="#{bundle.Field} [#{bundle.Name}] #{bundle.MustBeFilled}"/>
+                
+                <p:outputLabel value="#{bundle.BundleKey}"/>                
+                <p:inputText value="#{_bean.editedItem.bundleName}"
+                             styleClass="ui-grid-col-12"
+                             onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                             onchange="return itemChange = 1;"
+                             disabled="#{_bean.isReadOnly()}"/>
+                
                 <h:panelGroup rendered="#{_bean.editedItem.id != null}">
                     <p:separator />
                     <p:commandButton value="#{bundle.AddStatusInTypeDocs}" 
