--- a/escom-bpm-web/src/main/webapp/view/processes/elements/doc-status-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/elements/doc-status-card.xhtml
@@ -4,10 +4,10 @@
                  template="/view/templ/templ-dlg.xhtml"
                  xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-    <ui:param name="_bean" value="#{stateCardBean}"/>
+    <ui:param name="_bean" value="#{docStatusCardBean}"/>
 
     <ui:define name="title">
-        #{bundle.ChangeDocState}
+        #{bundle.SetDocStatus}
     </ui:define>
     
     <ui:define name="menuActions" >
@@ -18,17 +18,19 @@
     
     <ui:define name="centerFormContent">       
         <p:tabView orientation="left" id="mainTabView" styleClass="ui-grid-col-12 col-padding" rendered="#{_bean.editedItem != null}" >
-            <p:tab title="#{bundle.State}"  >
+            <p:tab title="#{bundle.Status}"  >
                 <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces" >
-                    <p:selectOneMenu value="#{_bean.editedItem}" converter="stateConvertor"                           
-                           styleClass="ui-grid-col-6"
+                    <p:outputLabel value="#{bundle.Status}" />
+                    <p:selectOneMenu value="#{docStatusCardBean.selected}" converter="statusesDocConvertor"                           
+                           styleClass="ui-grid-col-12"
                            required="#{param['isRequired'] == 'true'}" 
-                           requiredMessage="#{bundle.Field} [#{bundle.State}] #{bundle.MustBeFilled}">
-                           <f:selectItems value="#{docsBean.getAvailableStates()}" var="state" itemLabel="#{stateBean.getBundleName(state)}" itemValue="#{state}" />
+                           requiredMessage="#{bundle.Field} [#{bundle.Status}] #{bundle.MustBeFilled}">
+                        <f:selectItems value="#{statusesDocBean.findAll()}" var="status" itemLabel="#{docStatusCardBean.getLabelFromBundle(status.bundleName)}" itemValue="#{status}" />
+                        <f:selectItem itemValue="#{null}" itemLabel="#{bundle.EmptySelData}"/>
                     </p:selectOneMenu>
                     <p:separator/>
                     <p:commandButton value="#{bundle.Save}" update="centerFRM"
-                                    action="#{_bean.onCloseCard('save')}" style="float: right;">
+                                     action="#{_bean.onCloseCard('save')}" style="float: right;">
                         <f:param name="isRequired" value="true"/>
                     </p:commandButton>
                 </p:panelGrid>
